# graphql-api

./: .dockerignore  Dockerfile  GEMINI.md  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: deploy.yml
k8s/: deployment.yaml
src/: create_db.py  main.py
tests/: test_graphql.py
